Revert "Revert "pull request fixes""
This reverts commit dbb00ac6a53eec1b52f5fe89f14d3ecce520cfcc.