@@ -5,19 +5,17 @@ import com.epam.team1.emotional.help.dto.QuestionRequestDto;
 import com.epam.team1.emotional.help.dto.QuestionResponseDto;
 import com.epam.team1.emotional.help.model.Answer;
 import com.epam.team1.emotional.help.model.Question;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
+@RequiredArgsConstructor
 public class QuestionMapper {
 
     private final AnswerMapper answerMapper;
-
-    public QuestionMapper(AnswerMapper answerMapper) {
-        this.answerMapper = answerMapper;
-    }
 
     public Question toQuestion(QuestionRequestDto dto){
         Question question = new Question();
@@ -34,13 +32,15 @@ public class QuestionMapper {
         return QuestionResponseDto.builder()
                 .id(question.getId())
                 .name(question.getName())
-                .answers(mapAllAnswers(question.getAnswersList()))
+                .answers(answerMapper.toAnswerResponseDtoList(question.getAnswersList()))
                 .build();
     }
 
-    private List<AnswerResponseDto> mapAllAnswers(List<Answer> answers) {
-        return answers.stream()
-                .map(answerMapper::mapToResponseDto)
-                .collect(Collectors.toList());
+
+
+    public List<QuestionResponseDto> toQuestionResponseDtoList(List<Question> questions){
+        return questions.stream()
+                .map(this::toQuestionResponseDto)
+                .toList();
     }
 }
